Started with 2D Plots

--- a/MyFirstHelixToolkitAppToPlayAround/packages.config
+++ b/MyFirstHelixToolkitAppToPlayAround/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="HelixToolkit" version="2.5.1" targetFramework="net461" />
   <package id="HelixToolkit.Wpf" version="2.5.1" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net40" requireReinstallation="true" />
 </packages>
