Completed Abaqus inp file parser for 2D based Inp Files

--- a/MyFirstHelixToolkitAppToPlayAround/MyFirstHelixToolkitAppToPlayAround.csproj
+++ b/MyFirstHelixToolkitAppToPlayAround/MyFirstHelixToolkitAppToPlayAround.csproj
@@ -99,6 +99,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AbaqusInpFileParser.cs" />
     <Compile Include="AddTriangleWindow.xaml.cs">
       <DependentUpon>AddTriangleWindow.xaml</DependentUpon>
     </Compile>
