--- a/MyFirstHelixToolkitAppToPlayAround/packages.config
+++ b/MyFirstHelixToolkitAppToPlayAround/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FParsec" version="1.1.1" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.7.0" targetFramework="net461" />
   <package id="HelixToolkit" version="2.5.1" targetFramework="net461" />
   <package id="HelixToolkit.Wpf" version="2.5.1" targetFramework="net461" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net40" requireReinstallation="true" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
